syntax  = "proto3";

package chatCamion;

service ServicioCliente {
    rpc PedirPaquete(PeticionPaquete) returns (PaqueteRecibido);
    rpc CompletarEntrega(PaqueteCompletado) returns (MensajeReply);
}

message PeticionPaquete {
    string tipoCamion = 1;
}

message PaqueteRecibido {
    string id = 1;
    string tipo = 2;
    string valor = 3;
    string origen = 4;
    string destino = 5;
    string intentos = 6;
    string fechaEntrega = 7; 
    string exito = 8;
}

message PaqueteCompletado {
    string id = 1;
    string tipo = 2;
    string valor = 3;
    string origen = 4;
    string destino = 5;
    string intentos = 6;
    string fechaEntrega = 7;
    string exito = 8; 
}


message MensajeReply {
    string respuesta1 = 1;
}
